# utf8-text

./: .clang-format  .ghci  .gitignore  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  README.md  default.nix  flake.nix  hie.yaml  release.nix  shell.nix  utf8-text.cabal
cbits/utf8/: decode.c
include/utf8/: decode.h
nix/: nixpkgs.nix  pkgs.nix
nix/exts/: prim-swar.nix  swar.nix  utf8-text.nix
nix/overlays/: haskell.nix
nix/pkgs/: prim-swar.nix  swar.nix
scripts/: format.sh
src/Data/: Utf8.hs
src/Data/Utf8/: Compat.hs  Prim.hs  TH.hs
src/Text/: Utf8.hs
src/Text/Utf8/: Error.hs  Prim.hs
test/: Test.hs
test-files/: lambdas.md
test/Test/: Compat.hs  Core.hs  Gen.hs  Utf8.hs
test/Test/Utf8/: Gen.hs  Length.hs
