cabal-version: 2.4

name:        utf8-text
category:    Data
version:     1.0.1
synopsis:    TODO 
description: TODO 

author:       jacob leach
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/utf8-text
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.2

extra-source-files:
  CHANGELOG.md
  README.md
  cbits
  include

source-repository head
  type:     git
  location: https://github.com/riz0id/utf8-text

flag llvm
  Description: Compile using the LLVM backend.
  Default:     False
  Manual:      True

common common
  default-language: Haskell2010

  default-extensions:
    ImportQualifiedPost

  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wmissing-export-lists

  if flag(llvm) 
    ghc-options: -fllvm 

  build-depends:
    , base >= 4.15.1 && < 4.17

library
  import:         common
  hs-source-dirs: src

  default-extensions:
    MagicHash

  ghc-options:
    -ddump-stg-final
    -ddump-to-file
    -dsuppress-uniques
    -dsuppress-module-prefixes

    -fobject-code
    -fllvm

    -- `-j4` is set (as opposed to `-j`) due to the small number of modules that 
    -- are exported by this package.
    -j4

    -- `-O` is explicitly set since none of the functions exported by this 
    -- library would benefit from higher optimization levels. This helps reduce 
    -- compile times. 
    -O2

    -- `-fmax-simplifier-iterations` is set to keep compile times in check. 
    -- The functions in this library are simple and do not need very many 
    -- simplifier passes.
    -fmax-simplifier-iterations=20

  build-depends:
    , ghc-prim         >= 0.7.0  && < 0.9
    , primitive
    , prim-bool        >= 1.0.1  && < 1.1.0
    , prim-char        >= 1.0.0  && < 1.1.0
    , prim-compat      >= 1.0.0  && < 1.1.0
    , prim-int         >= 1.0.0  && < 1.1.0
    , template-haskell >= 2.17.0 && < 2.19

  exposed-modules:
    Text.Utf8
    Text.Utf8.Prim

  other-modules:
  
  cc-options:
    -std=c99
    -O3

  c-sources: cbits/utf8/decode.c
  includes:  include/utf8/decode.h

  if flag(llvm)
    cc-options: -mavx2
