cabal-version: 3.0

name:        utf8-text
category:    Data
version:     1.0.0
synopsis:    TODO 
description: TODO 

author:       jacob leach
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/utf8-text
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.2

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/riz0id/utf8-text
  
common common
  default-language: Haskell2010

  default-extensions:
    BinaryLiterals ImportQualifiedPost MagicHash NumericUnderscores 

  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wmissing-export-lists

  build-depends:
    , base >= 4.15.1 && < 4.17

library
  import:         common
  hs-source-dirs: src

  ghc-options:
    -- `-j4` is set (as opposed to `-j`) due to the small number of modules that 
    -- are exported by this package.
    -j2

    -- `-O` is explicitly set since none of the functions exported by this 
    -- library would benefit from higher optimization levels. This helps reduce 
    -- compile times. 
    -O

    -- `-fmax-simplifier-iterations` is set to keep compile times in check. 
    -- The functions in this library are simple and do not need very many 
    -- simplifier passes.
    -fmax-simplifier-iterations=4

    -fregs-iterative

  build-depends:
    , ghc-prim         >= 0.7.0  && < 0.9
    , template-haskell >= 2.17.0 && < 2.19

  exposed-modules:
    Data.Utf8
    Data.Utf8.Prim

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  default-extensions:
    BlockArguments KindSignatures ScopedTypeVariables

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

  build-depends:
    , hedgehog
    , utf8-text
    , tasty
    , tasty-hedgehog 

  other-modules: 
    Test.Compat
    Test.Core
    Test.Utf8
    Test.Utf8.Gen
    Test.Utf8.Length